docs: rewrite README for best practices and single source of truth
Restructure the README into best-practice sections (quick start, build, project layout, contributing) with a table of contents, point the release section at RELEASING.md, refresh the badges (CI, release, container image, Java 17, license), correct the module list, modernize the Docker Compose example, and use GitHub Issues for issue tracking.

Assisted-by: ClaudeCode:claude-opus-4-8
Signed-off-by: Ronny Trommer <ronny@no42.org>